--- a/index.html
+++ b/index.html
@@ -21,17 +21,19 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 800px; /* Add a maximum width */
+            width: 100%; /* Ensure the container takes full width */
         }
         iframe {
             width: 100%;
-            height: 315px;
+            height: 450px; /* Adjust the height to maintain aspect ratio */
             border: none;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Server!</h1>
+        <h1>Welcome to CodeWithMuh Youtube Channel!</h1>
         <p>Check out my YouTube video below:</p>
         <iframe src="https://www.youtube.com/embed/nL1xTvQ2bOo?si=pMAlpbRMtdax2Ere" allowfullscreen></iframe>
     </div>
